Page made responsive with help of flex

--- a/css/13 feb 2022/flex6 assignment.html
+++ b/css/13 feb 2022/flex6 assignment.html
@@ -43,7 +43,7 @@
         <div><img src="../../images/taco logo2.png" alt="No Image Found"></div>
         <div><img src="../../images/beer logo1.png" alt="No Image Found"></div>
         <div><img src="../../images/wine logo1.png" alt="No Image Found"></div>
-        <div><img src="https://i.ibb.co/thT1FCJ/music-logo1.png" alt="No Image Found"></div>
+        <div><img src="../../images/music logo1.png" alt="No Image Found"></div>
     </div>
 
     <div class="sec2">
