--- a/StudentFeedbackSystem/projecttrial1.html
+++ b/StudentFeedbackSystem/projecttrial1.html
@@ -12,10 +12,20 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <style>
+        body {
+
+            background-image: url('http://testch.ecssofttech.com/StudentFeedbackSystem/ProjectImages/student.jpg');
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
-    <header class="h1 text-center">Student Feedback System</header>
+    <header class="h1 text-center text-danger">Student Feedback System</header>
 
     <nav class="bg-primary d-flex justify-content-around">
 
@@ -26,7 +36,7 @@
                 aria-haspopup="true" aria-expanded="false">
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
-            <div class="dropdown-menu">
+            <div class="dropdown-menu bg-primary">
                 <a class="dropdown-item" href="#">Link 1</a>
                 <a class="dropdown-item" href="#">Link 2</a>
                 <a class="dropdown-item" href="#">Link 3</a>
@@ -44,7 +54,7 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
 
-            <div class="dropdown-menu">
+            <div class="dropdown-menu bg-primary">
                 <a class="dropdown-item" href="#">Link 1</a>
                 <a class="dropdown-item" href="#">Link 2</a>
                 <a class="dropdown-item" href="#">Link 3</a>
@@ -59,10 +69,10 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
 
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Link 1</a>
-                <a class="dropdown-item" href="#">Link 2</a>
-                <a class="dropdown-item" href="#">Link 3</a>
+            <div class="dropdown-menu bg-primary">
+                <a class="dropdown-item bg-primary" href="#">Link 1</a>
+                <a class="dropdown-item bg-primary" href="#">Link 2</a>
+                <a class="dropdown-item bg-primary" href="#">Link 3</a>
             </div>
         </div>
     </nav>
