made some minor changes in appearance

--- a/StudentFeedbackSystem/projecttrial1.html
+++ b/StudentFeedbackSystem/projecttrial1.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <header class="h1 text-center text-danger">Student Feedback System</header>
+    <header class="h1 text-center text-warning">Student Feedback System</header>
 
     <nav class="bg-primary d-flex justify-content-around">
 
@@ -36,7 +36,7 @@
                 aria-haspopup="true" aria-expanded="false">
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
-            <div class="dropdown-menu bg-primary">
+            <div class="dropdown-menu bg-light">
                 <a class="dropdown-item" href="#">Link 1</a>
                 <a class="dropdown-item" href="#">Link 2</a>
                 <a class="dropdown-item" href="#">Link 3</a>
@@ -54,7 +54,7 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
 
-            <div class="dropdown-menu bg-primary">
+            <div class="dropdown-menu bg-light">
                 <a class="dropdown-item" href="#">Link 1</a>
                 <a class="dropdown-item" href="#">Link 2</a>
                 <a class="dropdown-item" href="#">Link 3</a>
@@ -69,10 +69,10 @@
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
 
-            <div class="dropdown-menu bg-primary">
-                <a class="dropdown-item bg-primary" href="#">Link 1</a>
-                <a class="dropdown-item bg-primary" href="#">Link 2</a>
-                <a class="dropdown-item bg-primary" href="#">Link 3</a>
+            <div class="dropdown-menu bg-light">
+                <a class="dropdown-item" href="#">Link 1</a>
+                <a class="dropdown-item" href="#">Link 2</a>
+                <a class="dropdown-item" href="#">Link 3</a>
             </div>
         </div>
     </nav>
